cf Added support for JDK 8, NOT FOR MERGE IN MAIN BRANCHES!
Fixed huge amount of incompatability issues and added some regress in dependencies.

NNOP-210