@@ -6,6 +6,7 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 
+import static net.n2oapp.platform.selection.api.CollectionUtil.listOf;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 
@@ -13,13 +14,13 @@ public class FlatteningIterableTest {
 
     @Test
     public void testFlatten() {
-        final List<List<Integer>> lists = List.of(
-            List.of(1, 2, 3),
-            Collections.emptyList(),
-            List.of(3, 2),
-            Collections.emptyList(),
-            Collections.emptyList(),
-            List.of(1)
+        final List<List<Integer>> lists = listOf(
+                listOf(1, 2, 3),
+                Collections.emptyList(),
+                listOf(3, 2),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                listOf(1)
         );
         final FlatteningIterable<Integer> iterable = new FlatteningIterable<>(lists);
         Iterator<Integer> iter = iterable.iterator();
